--- a/new.html
+++ b/new.html
@@ -1,1 +1,11 @@
-const k="Anjali";
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>hello im anjali gupta</h1>
+</body>
+</html>
