--- a/new.html
+++ b/new.html
@@ -7,12 +7,13 @@
 </head>
 <body>
     <h1>hello im anjali gupta
-
+<h1>hhaow</h1>
         <h1>
-            hrlo
+            hrlo erlhirrrrr
         </h1>
 
 
     </h1>
+    <h2>hii</h2>
 </body>
 </html>
