--- a/new.html
+++ b/new.html
@@ -1,1 +1,37 @@
-const k="Anjali";
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    </head>
+<body>
+    <h1>hii this is anjali</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod.</p>
+    <button>click me</button>
+    <a href="https://www.google.com">google</a>
+    <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_120x44dp.png" alt="google">
+    <ul>
+        <li>home</li>
+        <li>about</li>
+        <li>contact</li>
+    </ul>
+    <ol>
+        <li>home</li>
+        <li>about</li>
+        <li>contact</li>
+    </ol>
+    <table>
+        <tr>
+            <th>name</th>
+            <th>age</th>
+            <th>city</th>
+        </tr>
+        <tr>
+            <td>anjali</td>
+            <td>20</td>
+            <td>delhi</td>
+        </tr>
+    </table>
+</body>
+</html>
